@@ -4094,8 +4094,12 @@ proc tooltipDelCmd tbl { tooltip::tooltip $tbl "" }
           </tbody>
         </table>
 
-        <p>Tree styles for use with large fonts and images (needed on
-        high-resolution displays):</p>
+        <p>On Windows 7 and later, the sizes used by the tree styles
+        <code><b>vistaAero</b></code>, <code><b>vistaClassic</b></code>, 
+        <code><b>win7Aero</b></code>, and <code><b>win7Classic</b></code> are
+        <i>automatically</i> adapted to the current system-wide DPI scaling
+        level.&nbsp; Platform-independent <i>manual</i> scaling is supported by
+        the following tree styles:</p>
 
         <table border="2" cellspacing="0" cellpadding="3" rules="groups">
           <colgroup></colgroup>
@@ -4295,8 +4299,8 @@ proc tooltipDelCmd tbl { tooltip::tooltip $tbl "" }
             <td><img src="bicolor1.png" alt="bicolor1" width="120" height=
             "51"></td>
 
-            <td>While the tree style <code><b>bicolor1</b></code> has "normal"
-            size, the three other styles are suitable for use with large fonts
+            <td>While the tree style <code><b>bicolor1</b></code> uses "normal"
+            sizes, the three other styles are suitable for use with large fonts
             and images (needed on high-resolution displays).</td>
           </tr>
 
@@ -4308,8 +4312,8 @@ proc tooltipDelCmd tbl { tooltip::tooltip $tbl "" }
             <td><img src="classic1.png" alt="classic1" width="120" height=
             "51"></td>
 
-            <td>While the tree style <code><b>classic1</b></code> has "normal"
-            size, the three other styles are suitable for use with large fonts
+            <td>While the tree style <code><b>classic1</b></code> uses "normal"
+            sizes, the three other styles are suitable for use with large fonts
             and images (needed on high-resolution displays).</td>
           </tr>
 
@@ -4468,8 +4472,8 @@ proc tooltipDelCmd tbl { tooltip::tooltip $tbl "" }
             <td><img src="plain1.png" alt="plain1" width="120" height=
             "51"></td>
 
-            <td>While the tree style <code><b>plain1</b></code> has "normal"
-            size, the three other styles are suitable for use with large fonts
+            <td>While the tree style <code><b>plain1</b></code> uses "normal"
+            sizes, the three other styles are suitable for use with large fonts
             and images (needed on high-resolution displays).</td>
           </tr>
 
